--- a/.github/workflows/tidbyt-routine.yaml
+++ b/.github/workflows/tidbyt-routine.yaml
@@ -32,5 +32,5 @@ jobs:
           pixlet push \
             --api-token "${{ secrets.TIDBYT_API_TOKEN }}" \
             --installation-id routine \
-            --device-id "${{ secrets.TIDBYT_DEVICE_ID }}" \
+            "${{ secrets.TIDBYT_DEVICE_ID }}" \
             routine.webp
